--- a/tables.html
+++ b/tables.html
@@ -186,6 +186,51 @@
 
                           </div>
                         </div>
+
+                          <div class="panel panel-primary">
+                            <div class="panel-heading">Table with thumbnail</div>
+                            <div class="panel-body">
+                              <table class="table table-striped table-hover">
+                                <thead>
+                                  <tr>
+                                    <th colspan="2">Item Name</th>
+                                    <th>Raw weight</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td><img src="http://lorempixel.com/40/40/food?afK5dD" class="img-thumbnail" alt="Item description" title="Some shop item">
+                                    </td>
+                                    <td>Sweet Chilli Burger</td>
+                                    <td>200g</td>
+                                    <td>$8.00</td>
+                                    <td>1x</td>
+                                  </tr>
+                                  <tr>
+                                    <td><img src="http://lorempixel.com/40/40/food?L5EddA5" class="img-thumbnail" alt="Item description" title="Some shop item">
+                                    </td>
+                                    <td>Royal Hamburger</td>
+                                    <td>1,800g</td>
+                                    <td>$30.00</td>
+                                    <td>2x</td>
+                                  </tr>
+                                  <tr>
+                                    <th>Total</th>
+                                    <th>&nbsp;</th>
+                                    <th>&nbsp;</th>
+                                    <th>$68.00</th>
+                                    <td>1x</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                              <a href="#" class="btn btn-primary btn-bg pull-right">View and Checkout</a>
+                            </div>
+                          </div>
+
+
+
 					</div>
 				</div>
 			</div>
