Add user profile and calendar widget to dashboard

--- a/charts.html
+++ b/charts.html
@@ -57,15 +57,15 @@
 				<nav class="col-md-3">
 					<ul>
 						<li class=""><a href="index.html"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
+						<li class=""><a href="schedule.html"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
 						<li class=""><a href="tables.html"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
+						<li class=""><a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
+						<li class=""><a href="userprofile.html"><i class="glyphicon glyphicon-user"></i>Users</a></li>
 					</ul>
 				</nav>
 
