--- a/schedule.html
+++ b/schedule.html
@@ -140,12 +140,12 @@
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
+						<li class=""><a href="charts.html"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
+						<li class=""><a href="tables.html"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
+						<li class=""><a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
+						<li class=""><a href="userprofile.html"><i class="glyphicon glyphicon-user"></i>Users</a></li>
 					</ul>
 				</nav>
 
