Create login screen

--- a/login.html
+++ b/login.html
@@ -13,11 +13,7 @@
 
 		<!-- load css -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-		<link rel="stylesheet" media="all" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" media="all" type="text/css" href="css/gridview.css" />
-        <link rel="stylesheet" media="all" type="text/css" href="css/bootstrap-datepicker3.min.css"/>
-
+        <link rel="stylesheet" media="all" type="text/css" href="css/style.css" />
 
         <!-- load fonts -->
         <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
@@ -25,301 +21,53 @@
         <!-- Latest compiled and minified JavaScript -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="js/bootstrap-datepicker.min.js"></script>
 	</head>
 
 	<body>
-			<header>
-				<div id="index_menu">
-
-				</div>
-
-				<div id="tool_bar">
-					<p class="title">
-						Opilus Admin Panel
-					</p>
-
-
-					<ul class="menu">
-                        <li><input type="search" class="searchBox" placeholder="Search.."/></li>
-						<li><a href="#">Help Support</a></li>
-						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
-					</ul>
-				</div>
-			</header>
+			<header></header>
 
 
 
-			<div id="main" class="row">
-				<nav class="col-md-3">
-					<ul>
-						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
-						<li class=""><a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
-                            <span class="badge alert-info">4</span>
-                        </li>
-						<li class=""><a href="charts.html"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
-						<li class=""><a href="tables.html"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
-						<li class=""><a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
-                            <span class="badge alert-warning">3</span>
-                        </li>
-						<li class=""><a href="userprofile.html"><i class="glyphicon glyphicon-user"></i>Users</a></li>
-					</ul>
-				</nav>
 
-				<div id="content" class="col-md-9 red-content">
-
-					<!-- title panel -->
-					<div id="title_panel">
-						<h3>Dashboard</h3>
-					</div>
-
-					<!-- content -->
-					<div>
-
-                        <!-- Sales stats & usage stats -->
-                        <div class="row">
-                            <!-- states charts -->
-                            <div class="col-md-8">
-                                <div class="panel panel-default">
-                                  <div class="panel-heading">Sales Stats</div>
-                                  <div class="panel-body">
-                                      <!-- area chart -->
-                                      <div id="area-example" style="height:200px;"></div>
-                                  </div>
-                                </div>
+				<div class="container" style="margin-top:30px">
+                  <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                      <div class="panel-body">
+                        <form role="form">
+                          <div class="form-group">
+                            <label for="exampleInputEmail1" class="sr-only">Email address</label>
+                            <div class="input-group">
+                              <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                              <input type="email" class="form-control" id="exampleInputEmail1"
+                                placeholder="Enter username or email">
                             </div>
-
-
-                            <!-- usage stats -->
-                            <div class="col-md-4">
-                                <div class="panel panel-default ">
-                                  <div class="panel-heading">Usage stats</div>
-                                    <div class="panel-body" style="height:230px;">
-                                        <table class="stats">
-                                            <tr>
-                                                <td>Google chrome</td><td><span class="label label-success">42.8%</span></td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>Firefox</td><td><span class="label label-primary">17.2%</span></td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>Safari</td><td><span class="label label-info">15.5%</span></td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>Internet Explorer</td><td><span class="label label-warning">15.5%</span></td>
-                                            </tr>
-
-                                            <tr>
-                                                <td>Others</td><td><span class="label label-danger">9%</span></td>
-                                            </tr>
-                                        </table>
-                                    </div> <!-- end of panel body -->
-                                </div> <!-- end of panel -->
-                            </div> <!-- end of column -->
-                        </div> <!-- end of row -->
-
-
-                            <div class="panel panel-default">
-                              <div class="panel-heading">Employees information</div>
-                              <div class="panel-body">
-
-                                  <!-- table grid view -->
-                                  <div class="grid">
-                                      <table width="100%">
-                                          <tr>
-                                              <th>#</th>
-                                              <th>Employee Name</th>
-                                              <th>Age</th>
-                                              <th>Salary</th>
-                                              <th>Hire date</th>
-                                              <th>Details</th>
-                                          </tr>
-
-                                          <tr>
-                                              <td align="center">1</td>
-                                              <td>Mohanad Kaleia</td>
-                                              <td>26</td>
-                                              <td>800$</td>
-                                              <td>01/08/2014</td>
-                                              <td align="center">
-                                                  <a title="view" class="btn btn-default btn-xs" href="#">
-                                                    <i class="glyphicon glyphicon-file"></i>
-                                                  </a>
-                                              </td>
-                                          </tr>
-
-                                          <tr>
-                                              <td align="center">2</td>
-                                              <td>Rami Aqqad</td>
-                                              <td>27</td>
-                                              <td>850$</td>
-                                              <td>01/01/2015</td>
-                                              <td align="center">
-                                                  <a title="view" class="btn btn-default btn-xs" href="#">
-                                                    <i class="glyphicon glyphicon-file"></i>
-                                                  </a>
-                                              </td>
-                                          </tr>
-
-                                          <tr>
-                                              <td align="center">3</td>
-                                              <td>Mohanad Kaleia</td>
-                                              <td>26</td>
-                                              <td>800$</td>
-                                              <td>01/08/2014</td>
-                                              <td align="center">
-                                                  <a title="view" class="btn btn-default btn-xs" href="#">
-                                                    <i class="glyphicon glyphicon-file"></i>
-                                                  </a>
-                                              </td>
-                                          </tr>
-
-                                          <tr>
-                                              <td align="center">4</td>
-                                              <td>Jone Doe</td>
-                                              <td>41</td>
-                                              <td>1200$</td>
-                                              <td>01/08/2014</td>
-                                              <td align="center">
-                                                  <a title="view" class="btn btn-default btn-xs" href="#">
-                                                    <i class="glyphicon glyphicon-file"></i>
-                                                  </a>
-                                              </td>
-                                          </tr>
-
-                                          <tr>
-                                              <td align="center">5</td>
-                                              <td>Mohanad Kaleia</td>
-                                              <td>26</td>
-                                              <td>800$</td>
-                                              <td>01/08/2014</td>
-                                              <td align="center">
-                                                  <a title="view" class="btn btn-default btn-xs" href="#">
-                                                    <i class="glyphicon glyphicon-file"></i>
-                                                  </a>
-                                              </td>
-                                          </tr>
-                                      </table>
-                                  </div>
-                              </div>
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputPassword1" class="sr-only">Password</label>
+                            <div class="input-group">
+                              <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                              <input type="password" class="form-control" id="exampleInputPassword1"
+                                placeholder="Password">
                             </div>
-
-                        <div class="row">
-                            <div class='col-md-5'>
-
-                                <div class="panel panel-default">
-                                    <div class="panel-heading clearfix">
-                                         <h3 class="panel-title">Date Picker</h3>
-                                    </div>
-                                    <div class="panel-body">
-                                        <div class="input-group date" id="datePickerInline">
-
-                                        </div>
-                                    </div>
-
-                                <script type="text/javascript">
-                                    $('#datePickerInline').datepicker({
-                                    });
-                                </script>
-                                </div>
-                            </div>
-
-                            <div class="col-md-7 col-xs-10">
-                              <div class="well panel panel-default">
-                                <div class="panel-body">
-                                  <div class="row">
-                                    <div class="col-xs-12 col-sm-4 text-center">
-                                      <img src="http://api.randomuser.me/portraits/women/21.jpg" alt="" class="center-block img-circle img-thumbnail img-responsive">
-                                      <ul class="list-inline ratings text-center" title="Ratings">
-                                        <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                        <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                      </ul>
-                                    </div>
-                                    <!--/col-->
-                                    <div class="col-xs-12 col-sm-8">
-                                      <h2>Jane Doe</h2>
-                                      <p><strong>About: </strong> Web Designer / UI Expert. </p>
-                                      <p><strong>Hobbies: </strong> Read, out with friends, listen to music, draw and learn new things. </p>
-                                      <p><strong>Skills: </strong>
-                                        <span class="label label-info tags">html5</span>
-                                        <span class="label label-info tags">css3</span>
-                                        <span class="label label-info tags">jquery</span>
-                                      </p>
-                                    </div>
-                                    <!--/col-->
-                                    <div class="clearfix"></div>
-                                    <div class="col-xs-12 col-sm-4">
-                                      <h2><strong> 20,7K </strong></h2>
-                                      <p><small>Followers</small></p>
-                                      <button class="btn btn-success btn-block"><span class="fa fa-plus-circle"></span> Follow </button>
-                                    </div>
-                                    <!--/col-->
-                                    <div class="col-xs-12 col-sm-4">
-                                      <h2><strong>245</strong></h2>
-                                      <p><small>Following</small></p>
-                                      <button class="btn btn-info btn-block"><span class="fa fa-user"></span> View Profile </button>
-                                    </div>
-                                    <!--/col-->
-                                    <div class="col-xs-12 col-sm-4">
-                                      <h2><strong>43</strong></h2>
-                                      <p><small>Snippets</small></p>
-                                      <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Options </button>
-                                    </div>
-                                    <!--/col-->
-                                  </div>
-                                  <!--/row-->
-                                </div>
-                                <!--/panel-body-->
-                              </div>
-                              <!--/panel-->
-                            </div>
-                        </div>
+                            <a href="#" class="pull-right small">Forgot password?</a>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                            <input type="checkbox"> Stay signed in
+                            </label>
+                          </div>
+                          <a href="index.html" class="btn btn-success btn-sm">Sign in</a>
+                          <button type="button" class="btn btn-primary btn-sm">Create account</button>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
 
-					</div>
-				</div>
+
 			</div>
-
-			<footer>
-				Copyright to <a href="http://www.computech-sy.com">CompuTech Group</a>
-			</footer>
-
-
-
-        <script>
-
-
-
-       Morris.Area({
-          element: 'area-example',
-          data: [
-            { y: '2006', a: 25, b: 10 },
-            { y: '2007', a: 50,  b: 40 },
-            { y: '2008', a: 55,  b: 40 },
-            { y: '2009', a: 75,  b: 65 },
-            { y: '2010', a: 50,  b: 40 },
-            { y: '2011', a: 75,  b: 65 },
-            { y: '2012', a: 100, b: 90 }
-          ],
-          xkey: 'y',
-          ykeys: ['a', 'b'],
-          labels: ['Series A', 'Series B'],
-          resize: true
-
-        });
-
-	</script>
 
 	</body>
 
