--- a/charts.html
+++ b/charts.html
@@ -45,8 +45,8 @@
                         <li><input type="search" class="searchBox" placeholder="Search.."/></li>
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
+						<li class="active"><img src="http://api.randomuser.me/portraits/women/21.jpg"><a href="#">Mohanad Kaleia</a></li>
+                        <li><a href="login.html"><i class="glyphicon glyphicon-off"></i></a></li>
 					</ul>
 				</div>
 			</header>
