--- a/userprofile.html
+++ b/userprofile.html
@@ -45,8 +45,8 @@
                         <li><input type="search" class="searchBox" placeholder="Search.."/></li>
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
+						<li class="active"><img src="http://api.randomuser.me/portraits/women/21.jpg"/><a href="#">Mohanad Kaleia</a></li>
+                        <li><a href="login.html"><i class="glyphicon glyphicon-off"></i></a></li>
 					</ul>
 				</div>
 			</header>
@@ -82,7 +82,7 @@
                             <!-- left column -->
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="text-center">
-                                <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
+                                <img src="http://api.randomuser.me/portraits/women/21.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
                                 <h6>Upload a different photo...</h6>
                                 <input type="file" class="text-center center-block well well-sm">
                               </div>
@@ -172,7 +172,7 @@
 			</div>
 
 			<footer>
-				Copyright to <a href="http://www.computech-sy.com">CompuTech Group</a>
+				Copyright to <a href="http://www.mycodee.com">MyCodee</a>
 			</footer>
 
 	</body>
