--- a/tables.html
+++ b/tables.html
@@ -45,8 +45,8 @@
                         <li><input type="search" class="searchBox" placeholder="Search.."/></li>
 						<li><a href="#">Help Support</a></li>
 						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="images/john_doe.jpg"/><a href="#">Mohanad Kaleia</a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
+						<li class="active"><img src="http://api.randomuser.me/portraits/women/21.jpg"/><a href="#">Mohanad Kaleia</a></li>
+                        <li><a href="login.html"><i class="glyphicon glyphicon-off"></i></a></li>
 					</ul>
 				</div>
 			</header>
@@ -56,16 +56,16 @@
 			<div id="main" class="row">
 				<nav class="col-md-3">
 					<ul>
-						<li class=""><a href="idnex.html"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
+						<li class=""><a href="index.html"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
 						<li class=""><a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
                             <span class="badge alert-info">4</span>
                         </li>
 						<li class=""><a href="charts.html"><i class="glyphicon glyphicon-book"></i>Charts</a></li>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-picture"></i>Tables</a></li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
+						<li class=""><a href="forms.html"><i class="glyphicon glyphicon-list-alt"></i>Forms</a>
                             <span class="badge alert-warning">3</span>
                         </li>
-						<li class=""><a href="#"><i class="glyphicon glyphicon-user"></i>Users</a></li>
+						<li class=""><a href="userprofile.html"><i class="glyphicon glyphicon-user"></i>Users</a></li>
 					</ul>
 				</nav>
 
@@ -236,7 +236,7 @@
 			</div>
 
 			<footer>
-				Copyright to <a href="http://www.computech-sy.com">CompuTech Group</a>
+				Copyright to <a href="http://www.mycodee.com">MyCodee</a>
 			</footer>
 
 	</body>
