--- a/tables.html
+++ b/tables.html
@@ -9,7 +9,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="fav_icon.ico" rel="shortcut icon" type="image/x-icon" />
 
-		<title>OPILUS control panel V0.1</title>
+		<title>OPILUS control panel</title>
 
 		<!-- load css -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
