--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<!-- load css -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 		<link rel="stylesheet" media="all" type="text/css" href="css/style.css" />
         <link rel="stylesheet" media="all" type="text/css" href="css/gridview.css" />
@@ -32,31 +33,33 @@
 	</head>
 
 	<body>
-			<header>
-				<div id="index_menu">
+        <header>
+            <div id="tool_bar">
+                <ul class="title pull-left">
+                    <li><p class="">Opilus Admin Panel</p></li>
+                    <li><a href="#"><i class="fa fa-bars"></i></a></li>
+                </ul>
 
-				</div>
-
-				<div id="tool_bar">
-					<p class="title">
-						Opilus Admin Panel
-					</p>
-
-
-					<ul class="menu">
-                        <li><input type="search" class="searchBox" placeholder="Search.."/></li>
-						<li><a href="#">Help Support</a></li>
-						<li><a href="#">Settings</a></li>
-						<li class="active"><img src="http://api.randomuser.me/portraits/women/21.jpg"/><a href="#">Mohanad Kaleia</a></li>
-                        <li><a href="login.html"><i class="glyphicon glyphicon-off"></i></a></li>
-					</ul>
-				</div>
-			</header>
+                <ul class="menu">
+                    <li><a href="#"><i class="fa fa-cogs"></i></a></li>
+                    <li>
+                        <a href="login.html">
+                            <i class="glyphicon glyphicon-bell"><span class="badge badge-danger pull-right">3</span></i>
+                        </a>
+                    </li>
+                    <li>
+                        <img src="http://api.randomuser.me/portraits/women/21.jpg"/>
+                        <a href="#">Mohanad Kaleia <i class="fa fa-angle-down"></i></a>
+                    </li>
+                    <li><a href="login.html"><i class="fa fa-sign-out"></i>  Log out</a></li>
+                </ul>
+            </div>
+        </header>
 
 
 
 			<div id="main" class="row">
-				<nav class="col-md-3">
+				<nav class="col-md-2">
 					<ul>
 						<li class="active"><a href="#"><i class="glyphicon glyphicon-dashboard"></i>Dashboard</a></li>
 						<li class=""><a href="schedule.html"chart><i class="glyphicon glyphicon-calendar"></i>Schedule</a>
@@ -71,7 +74,7 @@
 					</ul>
 				</nav>
 
-				<div id="content" class="col-md-9 red-content">
+				<div id="content" class="col-md-10 red-content">
 
 					<!-- title panel -->
 					<div id="title_panel">
