User drop down menu

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                             <span>Mohanad Kaleia <i class="fa fa-angle-down"></i></span>
                         </a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#"><i class="fa fa-user"></i> <span>Profile</span></a></li>
+                            <li><a href="#"><i class="fa fa-user-secret"></i> <span>Account</span></a></li>
+                            <li><a href="#"><i class="fa fa-key"></i> <span>Change Password</a></li>
                             <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#"><i class="fa fa-cog"></i> <span>Settings</span></a></li>
                             <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
+                            <li><a href="#"><i class="fa fa-sign-out"></i> <span>Log Out</span></a></li>
                         </ul>
                     </li>
                     <li>
